# cargo-webquad

./: Cargo.toml  README.md  wtf.sh
src/: cli.rs  main.rs
