[package]
name = "cargo-webquad"
version = "0.1.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[package.metadata.android.permission]]
name = "android.permission.BLUETOOTH"
max_sdk_version = 30

[[package.metadata.android.permission]]
name = "android.permission.BLUETOOTH_ADMIN"

[[package.metadata.android.permission]]
name = "android.permission.ACCESS_FINE_LOCATION"

[[package.metadata.android.permission]]
name = "android.permission.BLUETOOTH_SCAN"

[[package.metadata.android.permission]]
name = "android.permission.BLUETOOTH_CONNECT"

[dependencies]
cargo = "0.62.0"
devserver_lib = {version = "0.4", default-features = false }
#devserver_lib = { path = "../devserver/devserver_lib" }
fs_extra = "1.2"
